Changes for APR 1.1 [Deferring these features when 1.0 is rolled out.]

  *) Add a new PRNG. Note that the implementation of SHA-256 is a
     stop-gap pending snarfing the SHA-1 implementation from apr-util
     and upgrading it to do SHA-256. Not yet ready for prime time.
     [Ben Laurie]

Changes with APR 1.0

  *) Add support for developers to use their own hashing function with
     apr_hash_make_custom.  [Ami Ganguli <hse_ami@yahoo.co.uk>]

  *) Support "large files" by default on 32-bit Unix platforms which
     implement the LFS standard.  [Joe Orton]

  *) Add apr_threadattr_stacksize_set() for overriding the default
     stack size for threads created by apr_thread_create().
     [Jeff Trawick]

  *) The whole codebase was relicensed and is now available under
     the Apache License, Version 2.0 (http://www.apache.org/licenses).
     [Apache Software Foundation]

  *) Switch to a single, top-level make. [Greg Stein]

  *) new error status APR_STATUS_IS_ENOTENOUGHENTROPY, Doxygen fixes
     [Sander Temme <sander at temme dot net]

  *) Add apr_socket_type_get() for retrieving the type (e.g., stream)
     of the socket.  [Philippe M. Chiasson]

  *) Removed deprecated interface apr_proc_other_child_check() 
     that behaved differently between win32 and unix.
     The unix behavor is now accomplished with
         apr_proc_other_child_refresh_all(APR_OC_REASON_RESTART)
     The win32 behavor is now accomplished with
         apr_proc_other_child_refresh_all(APR_OC_REASON_RUNNING)

  *) Removed apr_socket_opt_{get|set}(..., APR_SO_TIMEOUT) which
     was deprecated in favor of apr_socket_timeout_{get|set}().

  *) Change i386 FreeBSD to use the asm routines in apr_atomic.h
     to overcome issues with the FreeBSD atomic functions return
     type on i386. [David Reid]

  *) Added new versions of the apr_atomic functions for
     use with 32-bit ints  [Brian Pane]

  *) The following deprecated interfaces have been removed:
