@@ -7,6 +7,9 @@ Changes for APR 1.1 [Deferring these features when 1.0 is rolled out.]
 
 Changes with APR 1.0
 
+  *) Add new functions apr_signal_block, apr_signal_unblock to block/unblock
+     the delivery of a particular signal. [Madhusudan Mathihalli]
+
   *) Add support for developers to use their own hashing function with
      apr_hash_make_custom.  [Ami Ganguli <hse_ami@yahoo.co.uk>]
 
